# vessal

./: .env.example  .gitignore  CHANGELOG.md  LICENSE  README.md  SKILL.md  conftest.py  pyproject.toml
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml
console/post-mortems/: 20260421-skill-subsystem-rot.md
docs/architecture/: refactor-plan.md
references/whitepaper/: 01-problem.md  02-architecture.md  03-skills.md  04-frame.md  05-embodiment.md  06-cache.md  07-training.md  08-console.md  QA.md  README.md
src/vessal/: CONTEXT.md  README.md  __init__.py  __main__.py  cli.py
tests/: conftest.py
tests/architecture/: test_dependency_direction.py  test_hull_facade.py  test_hull_no_shell_import.py  test_no_duplicate_http_handlers.py  test_no_hull_compaction.py  test_no_in_source_tests.py  test_no_ns_collision.py  test_no_raw_http_server.py  test_pr6_invariants.py  test_protocol_conformance.py  test_readme_structure.py  test_skill_interface.py  test_skill_server_uses_static_router.py
tests/cli/: test_cli_check_update.py  test_cli_companion.py  test_cli_create.py  test_cli_run.py  test_cli_version.py  test_init_defaults.py  test_project_scaffold.py
tests/console_spa/: test_index_html.py
tests/e2e/: test_chat_diff_renders_list.py
tests/skills/: test_audio.py  test_search.py  test_vision.py
tests/smoke/: __init__.py  conftest.py  test_cli_no_tracebacks.py  test_cli_subcommands.py  test_create_wizard_collision.py  (+3 more)
vessal-skills/: CONTRIBUTING.md  README.md  registry.toml
(+426 files in other folders)
