[project]
name = "vessal"
version = "0.0.2"
description = "Vessal — Agent Runtime"
license = "Apache-2.0"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "cloudpickle>=3.1.2",
    "openai>=1.0.0",
    "python-dotenv>=1.0.0",
]

[project.urls]
Homepage = "https://github.com/vessal-ai/vessal"
Repository = "https://github.com/vessal-ai/vessal"

[dependency-groups]
dev = [
    "hatchling>=1.29.0",
    "pytest>=9.0.2",
    "pytest-cov>=7.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/vessal"]

[project.scripts]
vessal = "vessal.cli:main"
vs = "vessal.cli:main"

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["src", "tests"]
python_files = ["test_*.py"]
